test/types/cptr/c_ptrTo_domain.4.good
$CHPL_HOME/modules/standard/Errors.chpl:647: In function 'compilerError':
$CHPL_HOME/modules/standard/Errors.chpl:648: warning: compiler diagnostic depth value exceeds call stack depth
  $CHPL_HOME/modules/standard/CTypes.chpl:1188: called as compilerError(param msg(0) = "c_addrOfConst domain type not supported", param errorDepth = 2) from function 'c_addrOfConst'
  c_ptrTo_domain.chpl:11: called as c_addrOfConst(x: domain(1,int(64),one))
c_ptrTo_domain.chpl:11: error: c_addrOfConst domain type not supported
